--- a/contact.html
+++ b/contact.html
@@ -79,23 +79,23 @@
 						<div class="form-group">
 							<label>
 								Nom :
-							</label>
+							</label for="name">
 							<input id="name" class="form-control" placeholder="Dupont René" aria-label="entrez votre nom" required />
 						</div>
 						<div class="form-group">
 							<label>
 								Adresse email :
-							</label>
+							</label for="email">
 							<input id="email" class="form-control" type="email" placeholder="adress.email@google.fr" aria-label="entrez votre adresse mail" required />
 						</div>
 						<div class="form-group">
-							<label>
+							<label for="input_504">
 								Comment nous avez-vous connu ?
 							</label>
 							<input class="form-control" required id="input_504" placeholder="Flyers, recherche google, ..." aria-label="comment nous avez vous connu ?"/>
 						</div>
 						<div class="form-group">
-							<label>
+							<label for="message">
 								Brief de votre projet<br>
 							</label><textarea id="message" class="form-control" rows="4" cols="50" placeholder="Ajoutez autant de détails que nécessaire" aria-label="décrivez nous votre projet" required></textarea>
 						</div> 
@@ -150,6 +150,17 @@
 								<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
+						<div class="row">
+							<div class="col-sm-4">
+								<h5>Partenaires</h5>
+									<ul>
+										<li><a href="voiture.com">voiture.com</a></li>
+										<li><a href="pizza.com">pizza.com</a></li>
+										<li><a href="matoiture.com">matoiture.com</a></li>
+										<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+									</ul>		
+							</div>
+						</div>	
 					</div>
 				</div>
 			</div>
