--- a/index.html
+++ b/index.html
@@ -68,143 +68,149 @@
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
-	<div class="bloc bgc-white l-bloc" id="bloc-2-services">
-		<div class="container bloc-md">
-			<div class="row">
-				<div class="col-sm-12 text-center">
-					<h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</h2>
-				</div>
-			</div>
-			<div class="row voffset-lg med-width-whitespace">
-				<div class="col-sm-4">
-					<div class="text-center">
-						<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+	<section>
+		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
+			<div class="container bloc-md">
+				<div class="row">
+					<div class="col-sm-12 text-center">
+						<h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</h2>
 					</div>
-					<h3 class="mg-md text-center">
-						Web design
-					</h3>
-					<p class="text-center ">
-						Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
-					</p>
 				</div>
-				<div class="col-sm-4">
-					<div class="text-center">
-						<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+				<div class="row voffset-lg med-width-whitespace">
+					<div class="col-sm-4">
+						<div class="text-center">
+							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+						</div>
+						<h3 class="mg-md text-center">
+							Web design
+						</h3>
+						<p class="text-center ">
+							Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+						</p>
 					</div>
-					<h3 class="mg-md text-center">
-						Stratégie
-					</h3>
-					<p class="text-center ">
-						Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
-					</p>
-				</div>
-				<div class="col-sm-4">
-					<div class="text-center">
-						<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<div class="col-sm-4">
+						<div class="text-center">
+							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+						</div>
+						<h3 class="mg-md text-center">
+							Stratégie
+						</h3>
+						<p class="text-center ">
+							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+						</p>
 					</div>
-					<h3 class="mg-md text-center">
-						Illustrations
-					</h3>
-					<p class="text-center ">
-						Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
-					</p>
+					<div class="col-sm-4">
+						<div class="text-center">
+							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+						</div>
+						<h3 class="mg-md text-center">
+							Illustrations
+						</h3>
+						<p class="text-center ">
+							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
+						</p>
+					</div>
 				</div>
-			</div>
-			<div class="row voffset-lg voffset">
-				<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-					<blockquote>
-						<p>"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
-						</blockquote>
-						<p>Maxime Guilbard, PDG de À vos fourchettes</p>
+				<div class="row voffset-lg voffset">
+					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+						<blockquote>
+							<p>"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
+							</blockquote>
+							<p>Maxime Guilbard, PDG de À vos fourchettes</p>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 	<!-- bloc-2-services END -->
 
 	<!-- bloc-3-what-i-do -->
-	<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
-		<div class="container bloc-lg">
-			<div class="row tight-width-whitespace black-background">
-				<div class="col-sm-12">
-					<h2 class="mg-md text-center tc-white">
-						Nous pouvons vous aider !
-					</h2>
-					<p class="text-center white">
-						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
-						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un <strong>site</strong> de A à Z ou de donner un coup de jeune à leur <strong>site</strong> Que vous ayez besoin d’une <strong>identité visuelle</strong> complète ou d’une refonte de votre <strong>site</strong>, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des <strong>sites</strong> beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
-					</p>
+	<article>
+		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+			<div class="container bloc-lg">
+				<div class="row tight-width-whitespace black-background">
+					<div class="col-sm-12">
+						<h2 class="mg-md text-center tc-white">
+							Nous pouvons vous aider !
+						</h2>
+						<p class="text-center white">
+							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un <strong>site</strong> de A à Z ou de donner un coup de jeune à leur <strong>site</strong> Que vous ayez besoin d’une <strong>identité visuelle</strong> complète ou d’une refonte de votre <strong>site</strong>, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des <strong>sites</strong> beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</article>	
 	<!-- bloc-3-what-i-do END -->
 
 	<!-- bloc-4-portfolio -->
-	<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
-		<div class="container bloc-lg">
-			<div class="row">
-				<div class="col-sm-12 text-center">
-					<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations</h2>
+	<article>
+		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+			<div class="container bloc-lg">
+				<div class="row">
+					<div class="col-sm-12 text-center">
+						<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations</h2>
+					</div>
 				</div>
-			</div>
-			<div class="row tight-width-whitespace portfolio-row">
-				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="image design de magazines colorés représentant un journal local à Lyon" class="img-responsive portfolio-thumb" /></a>
-					<h3 class="mg-md text-center">
-						Refonte d'un site web pour un journal local
-					</h3>
-					<p class="text-center">
-						Nous avons créé une nouvelle <strong>identité visuelle</strong> pour un journal <strong>Lyonais</strong>
-					</p>
+				<div class="row tight-width-whitespace portfolio-row">
+					<div class="col-sm-6">
+						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="image design de magazines colorés représentant un journal local à Lyon" class="img-responsive portfolio-thumb" /></a>
+						<h3 class="mg-md text-center">
+							Refonte d'un site web pour un journal local
+						</h3>
+						<p class="text-center">
+							Nous avons créé une nouvelle <strong>identité visuelle</strong> pour un journal <strong>Lyonais</strong>
+						</p>
+					</div>
+					<div class="col-sm-6">
+						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="cliché photo design d'une photographe profesionnelle" /></a>
+						<h3 class="mg-md text-center">
+							Création d'un site web pour photographes
+						</h3>
+						<p class="text-center">
+							Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
+						</p>
+					</div>
 				</div>
-				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="cliché photo design d'une photographe profesionnelle" /></a>
-					<h3 class="mg-md text-center">
-						Création d'un site web pour photographes
-					</h3>
-					<p class="text-center">
-						Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
-					</p>
-				</div>
-			</div>
-			<div class="row tight-width-whitespace portfolio-row">
-				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="image de matériel de photographe professionnel"/></a>
-					<h3 class="mg-md text-center">
-						Création d'un site internet pour un voyageur
-					</h3>
-					<p class="text-center">
-						Nous avons élaboré un <strong>site internet design</strong> et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
-					</p>
-				</div>
-				<div class="col-sm-6">
-					<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="photo de deux personnes travaillant sur leur ordinateur portable" /></a>
-					<h3 class="mg-md text-center">
-						Conception d'un site pour une agence de mariage
-					</h3>
-					<p class="text-center">
-						Nous avons travaillé avec cette <strong>agence</strong> pour créer un <strong>site internet design</strong> permettant la présentation détaillée de leurs prestations.
-					</p>
+				<div class="row tight-width-whitespace portfolio-row">
+					<div class="col-sm-6">
+						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="image de matériel de photographe professionnel"/></a>
+						<h3 class="mg-md text-center">
+							Création d'un site internet pour un voyageur
+						</h3>
+						<p class="text-center">
+							Nous avons élaboré un <strong>site internet design</strong> et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
+						</p>
+					</div>
+					<div class="col-sm-6">
+						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="photo de deux personnes travaillant sur leur ordinateur portable" /></a>
+						<h3 class="mg-md text-center">
+							Conception d'un site pour une agence de mariage
+						</h3>
+						<p class="text-center">
+							Nous avons travaillé avec cette <strong>agence</strong> pour créer un <strong>site internet design</strong> permettant la présentation détaillée de leurs prestations.
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</article>	
 	<!-- bloc-4-portfolio END -->
 
 	<!-- bloc-5-cta -->
-	<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-		<div class="container bloc-lg">
-			<div class="row">
-				<div class="col-sm-12 text-center">
-					<h4 class="mg-md text-center">
-						Prêt pour redonner vie à votre <strong>projet</strong> ?<br>Contactez notre équipe !
-					</h4>
-						<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="accédez à la page contact">Contact</a>
+		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+			<div class="container bloc-lg">
+				<div class="row">
+					<div class="col-sm-12 text-center">
+						<h4 class="mg-md text-center">
+							Prêt pour redonner vie à votre <strong>projet</strong> ?<br>Contactez notre équipe !
+						</h4>
+							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="accédez à la page contact">Contact</a>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>	
 </main>	
 <!-- bloc-5-cta END -->
 
@@ -239,7 +245,17 @@
 							</div>
 						</div>	
 					</div>
-					
+					<div class="row">
+						<div class="col-sm-4">
+							<h5>Partenaires</h5>
+								<ul>
+									<li><a href="voiture.com">voiture.com</a></li>
+									<li><a href="pizza.com">pizza.com</a></li>
+									<li><a href="matoiture.com">matoiture.com</a></li>
+									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+								</ul>		
+						</div>	
+					</div>	
 				</div>
 			</div>
 		</div>
