--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="La Chouette Agence vous acceuil, venez rencontrer notre équipe experimentée de web designer à Lyon">
+    <meta name="description" content="La Chouette Agence vous accueil, venez rencontrer notre équipe expérimentée de web designer à Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -76,7 +76,7 @@
 						<h2>	
 							Agence de web design à Lyon
 						</h2>
-						<p> Nous aidons les entreprises à devenir attractives sur le net</p>
+						<p> Nous aidons les entreprises à devenir <strong>plus attractives sur Internet</strong></p>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -157,7 +157,7 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="image design de magazines colorés représentant un journal local à Lyon" class="img-responsive portfolio-thumb" /></a>
+						<a href="#" data-lightbox="img/livre.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/livre.jpg" alt="image design de magazines colorés représentant un journal local à Lyon" class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
 						</h3>
@@ -166,7 +166,7 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="cliché photo design d'une photographe profesionnelle" /></a>
+						<a href="#" data-lightbox="img/photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographe.jpg" class="img-responsive portfolio-thumb" alt="cliché photo design d'une photographe profesionnelle" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -177,7 +177,7 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="image de matériel de photographe professionnel"/></a>
+						<a href="#" data-lightbox="img/materiel.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/materiel.jpg" class="img-responsive portfolio-thumb" alt="image de matériel de photographe professionnel"/></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -186,7 +186,7 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="photo de deux personnes travaillant sur leur ordinateur portable" /></a>
+						<a href="#" data-lightbox="img/bureau.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/bureau.jpg" class="img-responsive portfolio-thumb" alt="photo de deux personnes travaillant sur leur ordinateur portable" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
