--- a/contact.html
+++ b/contact.html
@@ -80,24 +80,24 @@
 							<label for="name">
 								Nom :
 							</label>
-							<input id="name" class="form-control" placeholder="Dupont René" aria-label="entrez votre nom" required />
+							<input id="name" class="form-control" placeholder="Dupont René" aria-label="votre nom" required />
 						</div>
 						<div class="form-group">
 							<label for="email">
 								Adresse email :
 							</label>
-							<input id="email" class="form-control" type="email" placeholder="adress.email@google.fr" aria-label="entrez votre adresse mail" required />
+							<input id="email" class="form-control" type="email" placeholder="adress.email@google.fr" aria-label="votre adresse mail" required />
 						</div>
 						<div class="form-group">
 							<label for="input_504">
 								Comment nous avez-vous connu ?
 							</label>
-							<input class="form-control" required id="input_504" placeholder="Flyers, recherche google, ..." aria-label="comment nous avez vous connu ?"/>
+							<input class="form-control" required id="input_504" placeholder="Flyers, recherche google, ..."/>
 						</div>
 						<div class="form-group">
 							<label for="message">
 								Brief de votre projet<br>
-							</label><textarea id="message" class="form-control" rows="4" cols="50" placeholder="Ajoutez autant de détails que nécessaire" aria-label="décrivez nous votre projet" required></textarea>
+							</label><textarea id="message" class="form-control" rows="4" cols="50" placeholder="Ajoutez autant de détails que nécessaire" aria-label="message" required></textarea>
 						</div> 
 						<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="confirmer l'envoie du formulaire">
 							Envoyer
