--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<header>
-			<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="banniere de l'entreprise web designer la chouette agence à Lyon " height="40" /></a>
+			<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="banniere de l'entreprise web designer la chouette agence à Lyon " height="40px" /></a>
 		</header>
 			<nav class="navbar row">
 				<div class="navbar-header">
@@ -42,7 +42,7 @@
 							<a href="index.html">Accueil</a>
 						</li>
 						<li>
-							<a aria-label="aller a la page de contact" href="contact.html">Contact</a>
+							<a aria-label="page contact" href="contact.html">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -57,7 +57,7 @@
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace">
 				<div class="col-sm-12">
-					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="logo de l'entreprise web designer la chouette agence à Lyon" />
+					<img src="img/logo.png" class="center-block image-resize-mode" width="100px" alt="logo de l'entreprise web designer la chouette agence à Lyon" />
 					<h1 class="text-center hero-bloc-text tc-white ">
 						La chouette agence
 					</h1>
@@ -208,7 +208,7 @@
 						<h4 class="mg-md text-center">
 							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h4>
-							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="accédez à la page contact">Contact</a>
+							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="page contact">Contact</a>
 					</div>
 				</div>
 			</div>
