--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html" aria-label="Retour à la page acceuil">Accueil</a>
+						<a href="index.html" aria-label="page d'acceuil">Accueil</a>
 					</li>
 					<li>
 						<a href="contact.html">Contact</a>
@@ -99,7 +99,7 @@
 								Brief de votre projet<br>
 							</label><textarea id="message" class="form-control" rows="4" cols="50" placeholder="Ajoutez autant de détails que nécessaire" aria-label="message" required></textarea>
 						</div> 
-						<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="confirmer l'envoie du formulaire">
+						<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" aria-label="confirmer l'envoie">
 							Envoyer
 						</button>
 					</form>
